<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/backgroundapp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="34sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple"/>

            <EditText
                android:id="@+id/edtDN_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/edtDN_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="20dp"/>

                <CheckBox
                    android:id="@+id/imglove"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignEnd="@+id/edtDN_password"
                    android:layout_alignBottom="@+id/edtDN_password"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/love" />

            </RelativeLayout>

            <Button
                android:id="@+id/btnDN_dangNhap"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:background="@drawable/custom_button"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/notyetregistered"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textColor="@color/purple"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/txtDN_dangKy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/dangky"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtDN_quenmatkhau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quenmatkhau"
        android:textColor="@color/purple_500"/>
</LinearLayout>