<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundapp">

    <ImageView
        android:id="@+id/img_quaylaimandangnhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            android:background="@drawable/custom_edittext">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dangky1"
                    android:textSize="34sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/purple"/>

                <EditText
                    android:id="@+id/edtDK_username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext"
                    android:drawablePadding="8dp"
                    android:hint="@string/username"
                    android:autofillHints="email"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/edtDK_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:autofillHints="password"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="20dp"/>

                <Button
                    android:id="@+id/btnDK_dangKy"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/dangky1"
                    android:textSize="20sp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/purple"
                    android:background="@drawable/custom_button"
                    android:textAllCaps="false"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>